se corrigue la palabra mal escrita

--- a/curriculum.html
+++ b/curriculum.html
@@ -115,7 +115,7 @@
                 <li>bodeguero tienda Ripley</li>
                 <header>inicio: OCT 2023 - Termino: FBR 2024</header>
                 <br>
-                <li>Anfotrion Clinica UC CHISTUS</li>
+                <li>Anfitrion Clinica UC CHISTUS</li>
                 <header>inicio: FRB 2024 - Termino: MAR 2024</header>
             </ul>
         </fieldset>
