se a modificado la siguiente frase

--- a/curriculum.html
+++ b/curriculum.html
@@ -100,7 +100,7 @@
                 <li>Escolaridad Media: liceo Jovina naranjo</li>
                 <header>inicio: MAR 2008 - Termino: DIC 2012</header>
                 <br>
-                <li>superior: instituto INACAP </li>
+                <li>Educacion superior: instituto INACAP </li>
                 <header>Actualmente: FRB 2023 </header>
             </ul>
         </fieldset>
