se modifica el uso de h2 donde sale el nombre completo para agregarlo en un header como se pide en la pauta de evaluacion

--- a/curriculum.html
+++ b/curriculum.html
@@ -45,6 +45,10 @@
     fieldset header{
         font-size: 16px;
     }
+    #nombre-header{
+        font-size: 24px;
+        margin-bottom: 0;
+    }
 
 </style>
 
@@ -57,7 +61,9 @@
 
     <div id="curriculum">
         <img id="foto" src="foto tamaño carnet.jpg" width="150">
-        <h2>Felipe Eduardo Guzmán Vega</h2>
+        <br>
+        <header id="nombre-header">Felipe Eduardo Guzmán Vega</header>
+        <br>
 
         <fieldset>
             <legend>Datos generales</legend>
