se modifica el header de curriculum para darle un borde y se modifica el color de las letras a negro

--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
 <body>
 
 <header class="text-center mb-4 text-muted">
-    <h1>Curriculum Vitae</h1>
+    <h1 id="cv-title">Curriculum Vitae</h1>
 </header>
+
+
 
 <main class="container">
     <section id="personal-info">
