se agrega archivo de js para poder hacer que el fondo cambie de colores cumpliendo tambien con las 3 tonalidades de la evaluacion, se abrian agregado algunas imagenes para cambiar a las primeras pero esta queda sin efecto

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <script src="main.js"></script>
 
 <header class="text-center mb-4 text-muted">
     <h1 id="cv-title">Curriculum Vitae</h1>
@@ -88,9 +89,9 @@
         </button>
         <div class="collapse" id="hobbies-details">
             <ol>
-                <li>Practicar BJJ Brasileño <img src="bjj.jpg" alt="BJJ" width="100"></li>
-                <li>Ir al GYM <img src="pesas.webp" alt="GYM" width="100"></li>
-                <li>Hacer Trekking <img src="trekking.jpg" alt="Trekking" width="100"></li>
+                <li>Practicar BJJ Brasileño <img src="bjj.1.jpg" alt="BJJ" width="100"></li>
+                <li>Ir al GYM <img src="gym1.jpg" alt="GYM" width="100"></li>
+                <li>Hacer Trekking <img src="trekking.1.jpg" alt="Trekking" width="100"></li>
             </ol>
         </div>
     </section>
